# python-backend-starter

./: .env.example  .gitignore  README.md  alembic.ini  compose.prod.yaml  compose.yaml  pyproject.toml  rabbitmq.conf  techstack.md  techstack.yml
.github/workflows/: lint.yml  test.yml  tests.yml
app/: __init__.py  asgi.py  config.py  containers.py  logger.py  logging.py  sentry.py  server.py  tasks.py  worker.py
app/auth/: actors.py  decorators.py  dependencies.py  hooks.py  models.py  repos.py  resources.py  routes.py  schemas.py  services.py  tables.py  tasks.py  types.py
app/core/: constants.py  containers.py  database.py  dependencies.py  emails.py  error_handlers.py  errors.py  geo_ip.py  limiter.py  models.py  oauth.py  rate_limiter.py  ratelimiter.py  redis_client.py  schemas.py  security.py  tasks.py  templates.py
app/core/dependency_container/: __init__.py
app/core/listeners/: setup_routes.py
app/core/media_handlers/: __init__.py  json_handler.py
app/core/middleware/: aioinject.py  container.py  logger.py  (+5 more)
app/dependencies/: auth.py  auth_provider.py  authentication_token.py  authenticator.py  email_verification_token.py  oauth.py  password_reset_code.py  password_reset_token.py  rate_limiter.py  user.py  user_session.py  webauthn_challenge.py  webauthn_credential.py
app/health/: __init__.py  routes.py  schemas.py
app/lib/: constants.py  emails.py  enums.py  error_handlers.py  errors.py  geo_ip.py  openapi.py  rate_limiter.py  security.py  templates.py
app/meta/: routes.py
app/metadata/: models.py  routes.py  schemas.py
app/middleware/: rate_limiter.py
app/models/: auth_provider.py  authenticator.py  email_verification_code.py  email_verification_token.py  oauth_account.py  password_reset_code.py  password_reset_token.py  user.py  user_email.py  user_password.py  user_session.py  webauthn_credential.py
app/oauth/: clients.py  dependencies.py  routes.py  services.py
app/repositories/: auth_provider.py  authentication_token.py  authenticator.py  email_verification_code.py  email_verification_token.py  password_reset_code.py  password_reset_token.py  user.py  user_password.py  user_session.py  webauthn_challenge.py  webauthn_credential.py
app/routes/: auth.py  health.py  oauth.py  user.py
app/schemas/: auth.py  base.py  errors.py  user.py  user_session.py
app/services/: auth.py  oauth.py  user.py
app/tasks/: __init__.py
app/types/: auth.py
app/users/: dependencies.py  models.py  repos.py  resources.py  routes.py  schemas.py  services.py  tables.py
caddy/: Dockerfile
client/: .dockerignore  .env.example  Dockerfile  README.md  components.json  middleware.ts  next.config.mjs  openapitools.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/app/: globals.css  layout.tsx  page.tsx  providers.tsx
client/components/: icons.tsx  otp-input.tsx  register-flow-provider.tsx
client/lib/: api.ts  client.ts  constants.ts  env.ts  queryClient.ts
client/styles/: globals.css
migrations/: env.py  script.py.mako
migrations/versions/: 09d4c5134fa7_add_users_and_password_reset_tokens.py  2023-12-26_initial_migration.py  2024-01-06_initial_migration.py  2024-01-12_initial_migration.py  2024_01_12_initial_migration.py  2024_01_20_initial_migration.py  2024_01_23_create_extensions.py  2024_01_23_create_login_sessions.py  2024_01_23_initial_migration.py  2024_01_24_add_login_session_location.py  2024_02_10_initial_migration.py  2024_02_11_add_email_verification_tokens.py  2024_02_20_initial_migration.py  e7e6075fa809_add_users.py
reverse-proxy/: Caddyfile
schema/: openapi.json
scripts/: run-server.sh  run-tests.sh  run-worker.sh
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
server/app/: __init__.py  config.py  logger.py  sentry.py  server.py  tasks.py  worker.py
server/app/dependencies/: auth.py  database_session.py  email_verification_code.py  ip_address.py  paging.py  rate_limiter.py  register_flow.py  user.py  user_session.py  webauthn_challenge.py  webauthn_credential.py
server/app/lib/: constants.py  enums.py  error_handlers.py  errors.py  rate_limit.py  templates.py
server/app/lib/database/: base.py  engine.py  paging.py  session_factory.py
server/app/models/: email_verification_code.py  register_flow.py  user.py  user_email.py  user_session.py  webauthn_credential.py
server/app/repositories/: authentication_token.py  email_verification_code.py  register_flow.py  user.py  user_session.py  webauthn_challenge.py  webauthn_credential.py
server/app/routes/: auth.py  health.py  user.py
server/app/schemas/: auth.py  base.py  errors.py  health.py  paging.py  user.py  user_session.py  webauthn_credential.py
server/app/services/: auth.py  user.py
server/app/types/: auth.py  paging.py
server/app/utils/: avatars.py  formatting.py  query_params.py  regex_patterns.py
server/migrations/: env.py  script.py.mako
server/migrations/versions/: 2024_02_10_create_extensions.py  2024_02_20_initial_migration.py  2024_03_03_initial_migration.py  2024_03_03_remove_user_display_name.py  2024_03_04_initial_migration.py  2024_03_05_initial_migration.py  2024_03_10_initial_migration.py  2024_03_12_initial_migration.py
server/scripts/: generate_openapi_schema.py  generate_schema.py
server/templates/emails/email-verification-request/: body.txt
server/templates/emails/new-login-device/: body.txt
server/templates/emails/onboarding/: body.txt
server/tests/plugins/: repos.py  services.py
server/tests/unit/auth/: test_repos.py  test_services.py  test_tasks.py
server/tests/unit/users/: test_repos.py  test_services.py
src/app/: __init__.py  config.py
templates/base/: body.html  body.txt
templates/new-login-location/: body.html  body.txt
templates/onboarding/: body.txt
templates/reset-password/: body.html  body.txt  content.html  content.txt
tests/: conftest.py  dependencies.py
tests/auth/: test_repos.py  test_resouces.py  test_services.py
tests/integration/: conftest.py
tests/plugins/: repos.py  services.py
tests/unit/: mock_smtp.py
(+106 files in other folders)
