[project]
name = "starter"
version = "0.1"
description = "Backend starter using Python."
authors = [{ name = "Aryan Iyappan", email = "aryaniyappan2006@gmail.com" }]
dependencies = [
    "fastapi>=0.108.0",
    "starlette>=0.32.0",
    "uvicorn[standard]>=0.25.0",
    "sqlalchemy>=2.0.25",
    "pydantic[email]>=2.5.3",
    "argon2-cffi>=23.1.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.12.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "jinja2>=3.1.2",
    "user-agents>=2.2.0",
    "humanize>=4.9.0",
    "orjson>=3.9.10",
    "celery>=5.3.6",
    "marrow-mailer>=4.0.3",
    "redmail>=0.6.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "AGPL-3.0" }

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "anyio>=4.2.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.26.0",
]

[tool.pdm.scripts]
start-server = "app/server.py"
start-worker = "celery -A app.worker worker"
test = "pytest -vv"

[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "*",
] # package names should match these glob patterns (["*"] by default)
exclude = [] # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)
