[project]
name = "starter"
version = "0.1"
description = "Backend starter using Python."
authors = [{ name = "Aryan Iyappan", email = "aryaniyappan2006@gmail.com" }]
dependencies = [
    "fastapi>=0.109.0",
    "starlette>=0.35.1",
    "uvicorn[standard]>=0.25.0",
    "sqlalchemy>=2.0.25",
    "pydantic[email]>=2.5.3",
    "argon2-cffi>=23.1.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.12.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "jinja2>=3.1.3",
    "user-agents>=2.2.0",
    "humanize>=4.9.0",
    "orjson>=3.9.10",
    "celery>=5.3.6",
    "redmail>=0.6.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "AGPL-3.0" }

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "anyio>=4.2.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.26.0",
    "pytest-sugar>=0.9.7",
]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.12",
    "black>=23.12.1",
]

[tool.pdm.scripts]
start-server = "app/server.py"
start-worker = "celery -A app.worker worker"
test = "pytest -vv"
lint = { composite = ["black .", "ruff --fix .", "black .", "mypy ."] }


[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "*",
] # package names should match these glob patterns (["*"] by default)
exclude = [] # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)


[tool.mypy]
plugins = ["pydantic.mypy"]

strict = true
follow_imports = "normal"
ignore_missing_imports = false

allow_redefinition = false
disallow_any_explicit = false
ignore_errors = false
local_partial_types = true
no_implicit_optional = true
strict_optional = true
warn_no_return = true
warn_return_any = false
warn_unreachable = true

pretty = true
show_column_numbers = true
show_error_codes = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.ruff]
src = ["app", "tests"]
fixable = ["F", "E", "W", "I", "COM", "UP", "RUF"]
unfixable = [
    "F841", # variable  is assigned to but never used
]
select = ["ALL"]
ignore = [
    "E501",    # line length
    "ANN101",
    "ANN102",
    "D10",     # disable mandatory docstrings
    "D203",    # one-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    "PD",      # pandas-vet
    "PLR0913", # too many arguments
    "TCH001",
    "TCH002",
    "TCH003",
    "EXE",
    "COM812",
    "ISC001",
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101", "S105", "S106"]
"migrations/*" = ["INP001"]
"migrations/versions/*" = ["D400", "D415"]


[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.mccabe]
max-complexity = 6

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.ruff.pep8-naming]
classmethod-decorators = ["classmethod"]
staticmethod-decorators = ["staticmethod"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "parents"
